# MultiCellPoseRelease

./: .gitignore  0.12.4  CLAUDE.md  MultiCellPose.code-workspace  README.md  RELEASE_CHECKLIST.md  Untitled.ipynb  cellpose_context.md  environment.yml  gemini_rules.md  guv_app_context.md  pyproject.toml  run_server.py  setup.py  tox.ini  train_headless.py
.github/workflows/: ci.yml  publish-pypi.yml  release-installer.yml  test_and_deploy.yml
cellpose/: core.py  dynamics.py  io.py  models.py  remote_config.py  semantic_class_weights.py  semantic_label_utils.py  train.py  training_mode_utils.py  transforms.py
cpgrpc/: __init__.py  gRPC_guide.md
cpgrpc/client/: client.py
cpgrpc/protos/: cellpose_remote.proto
cpgrpc/server/: auth.py  cellpose_remote_pb2.py  cellpose_remote_pb2_grpc.py  services.py
guv_app/: main.py
guv_app/controllers/: analyzer_controller.py  basic_stats.py  home_controller.py  interactive_controller.py  interface.py  main_controller.py  training_controller.py
guv_app/data_models/: configs.py  entities.py  results.py
guv_app/models/: analyzer_model.py  app_state.py  interactive_model.py
guv_app/plugins/: __init__.py  basic_stats.py  interface.py  object_clusters.py  perimeter_intensity.py  plugin_validator.py  validator.py
guv_app/services/: analysis_service.py  image_service.py  model_management_service.py  remote_service.py  segmentation_service.py  training_dataset_service.py  training_service.py
guv_app/views/: analyzer_view.py  base_view.py  home_view.py  interactive_view.py  style.py  trainer_view.py
guv_app/views/dialogs/: plugin_config_dialog.py  ssh_dialog.py  training_dialog.py
guv_app/views/widgets/: __init__.py  control_panel.py  drawing.py
guv_app/workers/: __init__.py  analysis_worker.py  base_worker.py  basic_stats.py  file_download_worker.py  file_upload_worker.py  image_load_worker.py  inference_worker.py  interface.py  mask_load_worker.py  promote_worker.py  remote_analysis_worker.py  remote_inference_worker.py  remote_training_worker.py  statistics_worker.py  training_worker.py
install/: README-install.md  install.ps1  install.sh  preflight.py  repair.ps1  repair.sh
installer_build/: README.md  installer.nsi  requirements.txt  setup_environment.ps1
llm_skills/make-custom-plugin/: SKILL.md
llm_skills/make-custom-plugin/templates/: plugin_template.py
scripts/: test_install_windows_cuda121.ps1  validate_plugins.py
